--- a/repo.html
+++ b/repo.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First ripo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>This is my first ripo</h1>
     <h2>Hello world</h2>
+    <h2>This is heading 2</h2>
+    <h2>This is heading 3</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quasi perferendis non dolore nam? Aliquid blanditiis nesciunt magnam veritatis quisquam vitae voluptatibus labore reprehenderit, perspiciatis ducimus pariatur accusamus perferendis in!</p>
 </body>
 </html>
