--- a/repo.html
+++ b/repo.html
@@ -12,6 +12,9 @@
     <h2>Hello world</h2>
     <h2>This is heading 2</h2>
     <h2>This is heading 3</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quasi perferendis non dolore nam? Aliquid blanditiis nesciunt magnam veritatis quisquam vitae voluptatibus labore reprehenderit, perspiciatis ducimus pariatur accusamus perferendis in!</p>
+    <p class="n">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quasi perferendis non dolore nam? Aliquid blanditiis nesciunt magnam veritatis quisquam vitae voluptatibus labore reprehenderit, perspiciatis ducimus pariatur accusamus perferendis in!</p>
+    <p class="a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quasi perferendis non dolore nam? Aliquid blanditiis nesciunt magnam veritatis quisquam vitae voluptatibus labore reprehenderit, perspiciatis ducimus pariatur accusamus perferendis in!</p>
+    <p class="b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quasi perferendis non dolore nam? Aliquid blanditiis nesciunt magnam veritatis quisquam vitae voluptatibus labore reprehenderit, perspiciatis ducimus pariatur accusamus perferendis in!</p>
+    <p class="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quasi perferendis non dolore nam? Aliquid blanditiis nesciunt magnam veritatis quisquam vitae voluptatibus labore reprehenderit, perspiciatis ducimus pariatur accusamus perferendis in!</p>
 </body>
 </html>
